stage/k8s/3_Deployment.yaml
#####################################
# Vote Site 예제
# ---------------ENV-----------------
# Node: Single
# Pod: Multi(2)
# Container: Single
#####################################

# Deployment (Vote)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
spec:
  selector:
    matchLabels:
      service: vote
  template:
    metadata:
      labels:
        service: vote
    spec:
      containers:
        - name: vote
          image: docker.io/zlcus/react
          livenessProbe:
            httpGet:
              path: /
              port: 443
          readinessProbe:
            httpGet:
              path: /
              port: 443
          ports:
            - containerPort: 3000
              protocol: TCP

---
# Service (NodePort - vote)
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  type: NodePort
  ports:
    - port: 443
      nodePort: 31000
      protocol: TCP
  selector:
    service: vote
