stage/k8s/apply.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-example
  name: web-app
spec:
  selector:
    matchLabels:
      app: web-app
  replicas: 2
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: 626426825780.dkr.ecr.ap-northeast-2.amazonaws.com/kube-images:2048
        imagePullPolicy: Always
        name: web-app-container
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-example
  name: web-app-np
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 80
      protocol: TCP
  selector:
    app: web-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-example
  name: web-app-ing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/inbound-cidrs: '0.0.0.0/0'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/subnets: "subnet-0f9bc0afadb549a18,subnet-04e5e197b9c8a92a5"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:626426825780:certificate/49813f08-0c1f-4f57-9cf2-1d4a72b5baa5
spec:
  rules:
    - host: kube.eocis.app
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web-app-np
                port: 
                  number: 443
